[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/dialogs/newGameDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/themes/new_gui/neon.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Visualizer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/scenes/menu.gd" type="Script" id=4]
[ext_resource path="res://assets/Graphics/bg.png" type="Texture" id=5]
[ext_resource path="res://assets/Graphics/logo.png" type="Texture" id=6]
[ext_resource path="res://scenes/game/other/AnimatedIcon.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/scenes/game/other/VideoPlayer.gd" type="Script" id=8]
[ext_resource path="res://scripts/scenes/game/SaveSelectMenuPopup.cs" type="Script" id=9]
[ext_resource path="res://scenes/options.tscn" type="PackedScene" id=10]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Control" parent="." instance=ExtResource( 10 )]

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
volume_db = -80.0
buffering_msec = 1000
script = ExtResource( 8 )
tween_in_path = NodePath("FadeIn")
tween_out_path = NodePath("FadeOut")

[node name="FadeIn" type="Tween" parent="VideoPlayer"]

[node name="FadeOut" type="Tween" parent="VideoPlayer"]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 7

[node name="MenuButtons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -231.0
margin_top = -220.0

[node name="NewGame" type="Button" parent="MenuButtons"]
margin_right = 231.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start game"

[node name="LoadGame" type="Button" parent="MenuButtons"]
margin_top = 56.0
margin_right = 231.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Load game"

[node name="Options" type="Button" parent="MenuButtons"]
margin_top = 112.0
margin_right = 231.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Options"

[node name="Quit" type="Button" parent="MenuButtons"]
margin_top = 168.0
margin_right = 231.0
margin_bottom = 220.0
size_flags_vertical = 3
text = "Quit game"

[node name="NewGameDialog" parent="." instance=ExtResource( 1 )]
margin_left = 55.0
margin_top = 336.0
margin_right = 545.0
margin_bottom = 651.0

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -364.0
margin_top = -45.0
margin_right = 364.0
margin_bottom = 45.0
texture = ExtResource( 6 )

[node name="CheckButton" type="CheckButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -230.0
margin_bottom = 40.0
theme = ExtResource( 2 )
text = "Use... different things"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimatedIcon" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Visualizer" parent="." instance=ExtResource( 3 )]
position = Vector2( 235, 400 )
scale = Vector2( 0.9, 0.9 )
audio_node = NodePath("../AudioStreamPlayer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SaveSelectMenuPopup" type="WindowDialog" parent="."]
visible = true
margin_right = 716.0
margin_bottom = 441.0
window_title = "Save select"
script = ExtResource( 9 )

[node name="Container" type="ItemList" parent="SaveSelectMenuPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="MenuButtons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MenuButtons/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="MenuButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="SaveDataPreloaded" from="SaveSelectMenuPopup" to="." method="_on_SaveSelectMenuPopup_SaveDataPreloaded"]
